<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".signup_page"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="80dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:flow_horizontalBias="0.097"
        app:layout_constraintBottom_toTopOf="@+id/txt_email1"
        app:layout_constraintEnd_toStartOf="@id/Not_for_now1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/Not_for_now1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="0dp"
        android:clickable="true"
        android:text="Skip for now"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_email1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/signup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/email_enter1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_email1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#DCD8D8"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toTopOf="@+id/txt_password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email1" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_above="@+id/register"
        android:layout_below="@+id/txt_password1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#DCD8D8"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#795548"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password1" />


    <TextView
        android:id="@+id/txt_email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email_enter1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <TextView
        android:id="@+id/txt_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_enter1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_enter1" />

    <Button
        android:id="@+id/register"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edittext"
        android:clickable="true"
        android:text="@string/register"
        android:textColor="@color/black"
        app:iconTint="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/divider_left1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:strokeColor="@color/yellow" />

    <TextView
        android:id="@+id/toLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="90dp"
        android:clickable="true"
        android:onClick="go_to_login"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/already_user_Txt"
        app:layout_constraintTop_toBottomOf="@+id/social_icons1"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider_right1"
        android:layout_width="145dp"
        android:layout_height="3dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/social_icons1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dividerTxt1"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.6" />

    <View
        android:id="@+id/divider_left1"
        android:layout_width="145dp"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/social_icons1"
        app:layout_constraintEnd_toStartOf="@+id/dividerTxt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/dividerTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/social_icons1"
        app:layout_constraintEnd_toStartOf="@+id/divider_right1"
        app:layout_constraintStart_toEndOf="@+id/divider_left1"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <LinearLayout
        android:id="@+id/social_icons1"
        android:layout_width="312dp"
        android:layout_height="74dp"
        android:layout_alignParentBottom="true"

        android:layout_marginTop="25dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTxt1">

        <ImageView
            android:id="@+id/google_btn1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/googleSignup"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/facebook_btn1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/fbSignup"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/twitterSignup"
            android:src="@drawable/twitter" />
    </LinearLayout>

    <TextView
        android:id="@+id/already_user_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="90dp"
        android:text="@string/already_a_user"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toLoginPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_icons1"
        app:layout_constraintVertical_bias="1.0" />




</androidx.constraintlayout.widget.ConstraintLayout>