<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".login_page">

    <EditText
        android:id="@+id/password2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_above="@+id/login2"
        android:layout_below="@+id/txt_password2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#DCD8D8"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toTopOf="@+id/remembermeBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <View
        android:id="@+id/divider_underline2"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginStart="192dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="89dp"
        android:background="@android:drawable/screen_background_dark"
        android:foregroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toSignupPage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login2"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_edittext"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login"
        android:textColor="@color/black"
        app:iconTint="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/forgotPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remembermeBox2"
        app:strokeColor="@color/yellow" />

    <TextView
        android:id="@+id/need_account_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="80dp"
        android:text="@string/need_a_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toSignupPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_icons2"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider_right2"
        android:layout_width="125dp"
        android:layout_height="3dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="17dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/social_icons2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dividerTxt2"
        app:layout_constraintTop_toTopOf="@+id/dividerTxt2"
        app:layout_constraintVertical_bias="0.571" />

    <CheckBox
        android:id="@+id/remembermeBox2"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:text="@string/remember_me"
        app:layout_constraintBottom_toTopOf="@+id/login2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <EditText
        android:id="@+id/email_enter2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_email2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#DCD8D8"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#795548"
        app:layout_constraintBottom_toTopOf="@+id/txt_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email2"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/dividerTxt2"
        android:layout_width="21dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/social_icons2"
        app:layout_constraintEnd_toStartOf="@+id/divider_right2"
        app:layout_constraintStart_toEndOf="@+id/divider_left2"
        app:layout_constraintTop_toBottomOf="@+id/forgotPass" />

    <View
        android:id="@+id/divider_left2"
        android:layout_width="125dp"
        android:layout_height="3dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="17dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/social_icons2"
        app:layout_constraintEnd_toStartOf="@+id/dividerTxt2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dividerTxt2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@+id/dividerTxt2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2" />

    <LinearLayout
        android:id="@+id/social_icons2"
        android:layout_width="312dp"
        android:layout_height="74dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="94dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTxt2">

        <ImageView
            android:id="@+id/google_btn2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/googleSignup"
            android:focusable="true"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/facebook_btn2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/fbSignup"
            android:focusable="true"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/twitterSignup"
            android:focusable="true"
            android:src="@drawable/twitter"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_enter2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_enter2" />

    <TextView
        android:id="@+id/toSignupPage"
        android:layout_width="58dp"
        android:layout_height="18dp"
        android:layout_marginEnd="90dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="go_to_sign_in"
        android:text="@string/tosign_up"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/need_account_Txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/need_account_Txt"
        app:layout_constraintTop_toTopOf="@+id/need_account_Txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/email_enter2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />



</androidx.constraintlayout.widget.ConstraintLayout>